# eeduro_delta

./: README.md
eeduro_delta/: CMakeLists.txt  package.xml
eeduro_delta_description/: CMakeLists.txt  package.xml
eeduro_delta_description/cad/fcinfo/: base.csv
eeduro_delta_description/cad/fcinfo/gelenk/: distanzhülse_oben.csv  gabelkopf_oben.csv  gewindestange.csv  mutter_oben.csv  schraube_oben.csv
eeduro_delta_description/cad/fcinfo/gelenkstange/: Gelenkkopf_KBRM_02.csv  gewindearm_hülse.csv  gewindestange.csv  kugelgelenk.csv  (+2 more)
eeduro_delta_description/cad/fcstd/: Gelenkkopf_KBRM_02.fcstd  gelenk.fcstd  gelenk.fcstd1  gelenkstange.fcstd  gelenkstange.fcstd1  glenk1.fcstd  glenkstange.fcstd  glenkstange.fcstd1  oberarm.fcstd  oberarm.fcstd1  tool.fcstd  tool.fcstd1
eeduro_delta_description/cad/step/: D000_EEROS_Deltaroboter.stp  D003_Oberarm.stp  D004_Distanzhülse_klein.stp  D005_Distanzrohr.stp  D006_Gewindestange_kurz.stp  D007_Gewindestange_lang.stp  D008_Stütze.stp  D009_WZ_Flansch.stp  D021_Gabelkopf.stp
eeduro_delta_description/calculations/: .~lock.eeduro_delta_inertias.ods#  eeduro_delta_inertias.ods
eeduro_delta_description/calculations/matlab/: base.m  body.m  compound_bodys.m  joint.m  joint_rod.m  test.m  tool.m  upper_arm.m
eeduro_delta_description/include/eeduro_delta_joint_state_publisher/: EEDuroDeltaJointStatePublisher.hpp
eeduro_delta_description/launch/: eeduro_delta.rviz  eeduro_delta_rviz.launch  eeduro_delta_rviz_motor.launch  eeduro_delta_rviz_observer.launch
eeduro_delta_description/meshes/: delta_base.dae  delta_base_collision.dae  link1.dae  link1_scaled.dae  link2.dae  link2_scaled.dae  link3.dae  link3_scaled.dae  tool.dae  tool_scaled.dae
eeduro_delta_description/sdf/: delta.sdf
eeduro_delta_description/urdf/: .eeduro_delta.urdf.xacro.swp  eeduro_delta.gazebo  eeduro_delta.urdf  eeduro_delta.urdf.xacro  eeduro_delta2.urdf.xacro  eeduro_delta_inertial.urdf.xacro
(+40 files in other folders)
