<?xml version="1.0"?>
<package format="2">
  <name>eeduro_delta_description</name>
  <version>0.1.0</version>
  <description>The eeduro_delta_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="manuel@todo.todo">manuel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>

</package>
